--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,3 +1,11 @@
+body {
+  background-color: #F4DBD8;
+
+}
+
+h1, a{
+  font-family: 'Courgette', cursive;
+}
 .App {
   text-align: center;
 }
@@ -21,7 +29,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #F4DBD8;
 }
 
 .App-link {
