--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,11 +1,83 @@
-body {
-  background-color: #F4DBD8;
+/*========= IMPORTS ========== */
+/*========= VARIBALES ======== */
+/*========= RESET  =========== */
 
+.rounded-circle{
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
 }
+
+/*========= GLOBAL STYLING ========== */
+
+/* no . or # = GLOBAL ELEMENTS (aka 'default' HTML, no .(className), no #(id) */
+
+body {
+  background-color: #FAF3DD;
+  
+}
+
+/* ,(comma) inbetween = apply same rules to each (element), and/or .(className), and/or #(id) */
 
 h1, a{
   font-family: 'Courgette', cursive;
 }
+
+img{
+  width: 100%;
+}
+
+.homelaptop-img.container{
+  height: 400px;
+}
+
+/*========= HEADER IMAGE: BLOG PAGE ========== */
+
+/* no spaces .(inbetween).(classNames) = grab the element with both classNames  */
+
+.blog-page.header{
+  border:2px solid red;
+}
+
+/*spaces .(inbetween) .(classNames) = grab element 'inside' .className(parent) called .className(child) */
+
+.blog-page .header-wrap{
+  border: 2px dashed black;
+  background-image: url('../public/Images/blog-piggybank.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 450px;
+}
+
+/* .(className) = grab ALL elements that share this className */
+
+.header-card{
+  background-color: #F4DBD8;
+  border: 1px solid blue;
+
+}
+
+.header-card .card-title{
+  font-weight: 500;
+  font-size: 2em;
+}
+
+
+/*========= BLOG CARDS ========== */
+
+.card-text{  
+  font-family: Helvetica, sans-serif;
+  color:black;
+}
+
+.blog-img{
+object-fit: cover;
+height: 400px;
+
+}
+
+/* ======== NAVIGATION ========== */
+
 .App {
   text-align: center;
 }
@@ -14,6 +86,7 @@ h1, a{
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -44,3 +117,57 @@ h1, a{
     transform: rotate(360deg);
   }
 }
+
+
+
+/*========= MEDIA QUERIES ========== */
+  
+/* ==== X-SMALL (MOBILE) ==== */
+
+  /* @media screen and (max-width: 574px) {
+    body {
+      background-color: red;
+    }
+  }  */
+
+/* ==== MEDIUM (SM-TABLET)==== */
+
+  /* @media (min-width: 575px ) and (max-width: 767px) {
+    body {
+      background-color: blue;
+    }
+   } 
+  */
+
+/* ====MEDIUM (TABLET) ====*/
+
+  /* @media screen and (min-width: 768px) {
+    body {
+      background-color: pink;
+    }
+  } */
+
+/* ==== LARGE (SM-DESKTOP) ==== */
+
+  /* @media screen and (min-width: 992px) {
+    body {
+      background-color: yellow;
+    }
+  } */
+
+/* ==== LARGE (MD-DESKTOP) ==== */
+
+  /* @media screen and (min-width: 1200px) {
+    body {
+      background-color: green;
+    }
+  } */
+
+/* ==== XL-LARGE (LG-DESKTOP) ==== */
+
+  /* @media screen and (min-width: 1400px) {
+    body {
+      background-color: orange;
+    }
+  } */
+
