--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -65,7 +65,6 @@ h1, a{
 
 
 
-
 /*========= BLOG CARDS ========== */
 
 .card-text{  
@@ -73,10 +72,26 @@ h1, a{
   color:black;
 }
 
-.blog-img{
-object-fit: cover;
-height: 400px;
-max-height: 400px;
+.img-box{
+  background-position: center;
+  height: 400px;
+  max-height: 400px;
+}
+
+.blog-baby{
+  background-image: url('../public/Images/blog-baby-blog.jpg'); 
+}
+
+.blog-roth{
+  background-image: url('../public/Images/blog-budget-blog.jpg'); 
+}
+
+.blog-spreadsheets{
+  background-image: url('../public/Images/blog-investing-blog.jpg'); 
+}
+
+.blog-save{
+  background-image: url('../public/Images/blog-saving-blog.jpg'); 
 }
 
 /* ======== FOOTER ========== */
@@ -138,55 +153,4 @@ max-height: 400px;
 }
 
 
-
-/*========= MEDIA QUERIES ========== */
-  
-/* ==== X-SMALL (MOBILE) ==== */
-
-  /* @media screen and (max-width: 574px) {
-    body {
-      background-color: red;
-    }
-  }  */
-
-/* ==== MEDIUM (SM-TABLET)==== */
-
-  /* @media (min-width: 575px ) and (max-width: 767px) {
-    body {
-      background-color: blue;
-    }
-   } 
-  */
-
-/* ====MEDIUM (TABLET) ====*/
-
-  /* @media screen and (min-width: 768px) {
-    body {
-      background-color: pink;
-    }
-  } */
-
-/* ==== LARGE (SM-DESKTOP) ==== */
-
-  /* @media screen and (min-width: 992px) {
-    body {
-      background-color: yellow;
-    }
-  } */
-
-/* ==== LARGE (MD-DESKTOP) ==== */
-
-  /* @media screen and (min-width: 1200px) {
-    body {
-      background-color: green;
-    }
-  } */
-
-/* ==== XL-LARGE (LG-DESKTOP) ==== */
-
-  /* @media screen and (min-width: 1400px) {
-    body {
-      background-color: orange;
-    }
-  } */
 
